common-applications/control/om-grafana-ingress/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=github
            - --email-domain=*
            - --github-org=opensourceways
            - --github-team=community-administrator
            - --upstream=http://om-grafana-internal.om.svc.cluster.local
            - --http-address=0.0.0.0:4180
            - --cookie-expire=6h0m0s
            - --set-xauthrequest=true
            - --custom-sign-in-logo=https://openeulerinfrastructure.obs.cn-north-4.myhuaweicloud.com/img/gardener-large.png
            - --skip-auth-regex=^/api/
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:4b64a9c04a247dd5da3ff664d9d497c902324c3a
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: oauth2-proxy
#spec:
#  rules:
#    - host: build.osinfra.cn
#      http:
#        paths:
#          - backend:
#              serviceName: oauth2-proxy
#              servicePort: 4180
#            path: /oauth2
#  tls:
#    - hosts:
#        - build.osinfra.cn
#      secretName: tls-secrets
