common-applications/control/om-grafana-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: om-ingress
spec:
  tls:
    - hosts:
        - om.osinfra.cn
      secretName: om-grafana-tls
  rules:
    - host: om.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
